# EvilCorp

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  evil_corp.cc
src/black_market/: black_market.cc
src/include/api/: api.h
src/include/black_market/: black_market.h
src/include/lib_proxy/: lib_proxy.h  linux_lib.h  win_lib.h
src/include/miner/: btc_miner.h  mine_farm.h  wallet.h
src/include/threadpool/: thread_pool.h
src/include/trade/: trade.h
src/lib_proxy/: linux_lib.cc  win_lib.cc
src/miner/: mine_farm.cc  mining_farm.cc  wallet.cc
src/trade/: trade.cc
src/trader/: trade.cc
